--- a/MLP_torch.ipynb
+++ b/MLP_torch.ipynb
@@ -28,6 +28,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3])\n",
+      "tensor([ 0.5403+0.8415j, -0.8323+1.8186j, -2.9700+0.4234j])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor([1, 2, 3])\n",
+    "print(x)\n",
+    "print(torch.exp(1.j * x) * x) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -101,13 +121,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1763, -0.4532,  0.1567,  0.0083, -0.6841],\n",
-      "        [ 0.7141,  2.2895,  0.1022, -2.2632,  0.0128]])\n",
-      "tensor([[ 0.8237,  0.5468,  1.1567,  1.0083,  0.3159],\n",
-      "        [ 1.7141,  3.2895,  1.1022, -1.2632,  1.0128]])\n",
-      "tensor([[3.1072e-02, 2.0536e-01, 2.4550e-02, 6.9328e-05, 4.6806e-01],\n",
-      "        [5.0995e-01, 5.2419e+00, 1.0442e-02, 5.1220e+00, 1.6477e-04]])\n",
-      "tensor(-0.2931)\n"
+      "tensor([[ 0.6651, -0.2506, -0.2920,  0.6315, -0.5245],\n",
+      "        [-0.4401,  0.0594,  0.1322, -0.6005, -1.5138]])\n",
+      "tensor([[ 1.6651,  0.7494,  0.7080,  1.6315,  0.4755],\n",
+      "        [ 0.5599,  1.0594,  1.1322,  0.3995, -0.5138]])\n",
+      "tensor([[0.4424, 0.0628, 0.0853, 0.3987, 0.2751],\n",
+      "        [0.1937, 0.0035, 0.0175, 0.3606, 2.2917]])\n",
+      "tensor(-2.1335)\n"
      ]
     }
    ],
@@ -140,70 +160,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 3.3823e-01,  5.8423e-02, -7.8744e-01,  1.8933e-01,  7.6320e-01],\n",
-      "        [-1.0917e-02, -7.2966e-01, -4.3117e-01,  6.4404e-01, -1.2215e+00],\n",
-      "        [-1.2172e+00, -4.7681e-01, -1.5216e+00, -3.0882e-01, -8.3840e-01],\n",
-      "        [ 9.5612e-01,  5.4636e-02, -8.8334e-01,  1.0193e-01,  1.3377e+00],\n",
-      "        [-1.2013e+00,  1.9623e-01,  9.5308e-01,  7.5492e-01, -7.9918e-01],\n",
-      "        [-1.2067e-01, -2.4191e-01,  2.6517e+00, -9.7426e-02,  2.1286e-01],\n",
-      "        [ 1.1372e+00,  7.3514e-01, -2.2788e-01,  1.1136e+00, -1.0488e+00],\n",
-      "        [ 1.2867e-01, -5.7566e-02, -6.6958e-01,  9.6292e-01,  3.8521e-01],\n",
-      "        [-3.0902e-02, -1.0811e+00,  6.8977e-01,  1.3283e+00,  1.7496e-01],\n",
-      "        [-6.1554e-01,  3.4714e-01,  7.3296e-02,  9.7436e-02, -1.2176e+00],\n",
-      "        [ 1.1169e+00,  5.4009e-01,  8.8190e-01, -2.4136e-01, -7.4446e-03],\n",
-      "        [-1.9776e-02, -2.5478e-01, -4.6064e-01,  4.7199e-01, -2.9869e-01],\n",
-      "        [-4.1002e-01,  5.4023e-01, -1.9949e+00, -3.5520e-01, -3.1528e-01],\n",
-      "        [-1.4138e+00,  7.4103e-01,  8.7355e-02, -8.9262e-01, -1.3234e+00],\n",
-      "        [ 5.3051e-01,  5.1286e-02, -5.6793e-02,  2.0941e-01, -7.4565e-01],\n",
-      "        [-7.0103e-01,  9.8756e-01,  9.6905e-01,  2.1331e+00,  1.4793e+00],\n",
-      "        [ 3.3165e-01, -1.1060e+00,  2.8545e-01,  7.1084e-01, -2.9525e-01],\n",
-      "        [-2.5236e+00, -4.5098e-01, -1.1471e-01, -8.9213e-01,  5.7627e-02],\n",
-      "        [ 7.2174e-01, -1.0563e+00, -1.3943e+00,  7.8190e-01,  2.3071e-02],\n",
-      "        [ 5.1703e-02, -2.5779e+00, -5.0792e-01, -3.3957e-01, -4.3894e-01],\n",
-      "        [ 4.6040e-02,  7.2997e-01, -1.5925e+00, -1.1231e+00,  1.4677e+00],\n",
-      "        [-2.9808e-01, -1.3755e+00, -1.7667e-01,  6.1917e-01, -2.5121e+00],\n",
-      "        [ 1.9447e+00,  1.8793e-01, -1.6742e-03, -3.0263e-01,  2.3136e-02],\n",
-      "        [-2.6105e-01, -9.6543e-01, -1.6966e+00, -2.1631e+00,  8.8388e-01],\n",
-      "        [ 1.2005e-01,  1.4279e+00, -7.1068e-01,  1.3495e+00, -1.4475e+00],\n",
-      "        [-8.8676e-01, -2.3882e+00,  1.2850e+00, -1.7094e+00,  3.5507e-01],\n",
-      "        [ 1.1245e+00,  2.1971e-01, -1.1828e+00, -4.6852e-02,  1.2471e+00],\n",
-      "        [-2.2209e+00, -1.7690e+00,  1.0194e+00, -1.1807e+00, -6.2004e-01],\n",
-      "        [ 1.3816e+00, -7.4467e-01, -9.8487e-01,  4.2152e-01,  1.3621e+00],\n",
-      "        [-1.0143e+00, -7.2436e-01,  3.8535e-01,  1.1716e+00,  1.7813e+00],\n",
-      "        [ 1.4403e+00,  1.0335e+00,  3.9093e-01, -4.3461e-02,  9.2489e-01],\n",
-      "        [-3.0372e-01,  6.2951e-01, -2.6519e-01, -2.0371e-01, -1.5973e+00]])\n",
-      "tensor([[0.1073, 0.1093],\n",
-      "        [0.0628, 0.8056],\n",
-      "        [0.3112, 0.6906],\n",
-      "        [0.8131, 0.4033],\n",
-      "        [0.8628, 0.4902],\n",
-      "        [0.1101, 0.9956],\n",
-      "        [0.5755, 0.5162],\n",
-      "        [0.2393, 0.5162],\n",
-      "        [0.9655, 0.6773],\n",
-      "        [0.5397, 0.3832],\n",
-      "        [0.7652, 0.5618],\n",
-      "        [0.6735, 0.3192],\n",
-      "        [0.0311, 0.4304],\n",
-      "        [0.2741, 0.1852],\n",
-      "        [0.6547, 0.9155],\n",
-      "        [0.7490, 0.0294],\n",
-      "        [0.9427, 0.5711],\n",
-      "        [0.5142, 0.8775],\n",
-      "        [0.3138, 0.4889],\n",
-      "        [0.0366, 0.0479],\n",
-      "        [0.7723, 0.5934],\n",
-      "        [0.2419, 0.6888],\n",
-      "        [0.7279, 0.8463],\n",
-      "        [0.3393, 0.2802],\n",
-      "        [0.4750, 0.4031],\n",
-      "        [0.3257, 0.2503],\n",
-      "        [0.1053, 0.5706],\n",
-      "        [0.4856, 0.6139],\n",
-      "        [0.3587, 0.4604],\n",
-      "        [0.5479, 0.5538],\n",
-      "        [0.2354, 0.4070],\n",
-      "        [0.7238, 0.8464]])\n"
+      "tensor([[-3.3516e-01, -5.0804e-01,  1.4810e-01,  1.1565e-01,  7.9187e-01],\n",
+      "        [-2.0752e-01,  3.0787e-01,  1.7241e+00, -8.3766e-02, -7.1303e-01],\n",
+      "        [ 7.8818e-02,  1.6206e+00, -6.0350e-01, -1.8422e+00, -1.4700e+00],\n",
+      "        [ 1.0990e-01, -1.3130e+00,  1.0844e-01, -5.0723e-01,  5.7787e-01],\n",
+      "        [ 2.8045e-01,  1.5107e+00, -5.0154e-01,  1.2497e+00, -8.4612e-01],\n",
+      "        [ 6.0427e-01,  1.2478e+00, -1.6813e+00,  9.6409e-01,  2.3188e-01],\n",
+      "        [-3.4027e-02, -1.6516e-01, -2.5335e-01, -2.3908e-01, -5.8633e-01],\n",
+      "        [-2.6489e-01,  8.9319e-01, -1.3656e+00, -1.1591e+00, -7.6190e-01],\n",
+      "        [ 3.4573e-04, -1.1259e+00,  1.2353e+00, -7.9017e-01,  1.1493e+00],\n",
+      "        [ 3.8140e-01, -1.4738e+00,  1.4449e+00, -1.3212e+00, -1.9904e+00],\n",
+      "        [ 3.3138e-01,  6.1865e-01,  1.9274e+00,  8.9675e-01, -1.0010e+00],\n",
+      "        [-1.9519e+00, -8.4361e-01, -6.9205e-01, -1.8671e-02,  9.4785e-01],\n",
+      "        [-1.1878e+00,  6.3016e-01, -4.5104e-01,  2.3108e-01,  9.7320e-02],\n",
+      "        [ 1.8435e-01,  3.8889e-01, -1.6054e-01,  2.0581e-01,  5.3957e-01],\n",
+      "        [-7.3138e-01,  1.6845e+00, -5.1699e-01, -6.4422e-01, -1.0649e+00],\n",
+      "        [ 8.8937e-02, -7.3131e-02, -1.2577e+00,  1.4773e+00, -5.7666e-01],\n",
+      "        [-4.1315e-01, -7.7911e-01,  1.0004e+00,  9.4214e-01, -6.5962e-01],\n",
+      "        [ 2.6469e-01,  4.9899e-01,  3.9083e-01,  2.1657e+00,  1.5442e+00],\n",
+      "        [-4.1565e-01, -3.6344e-02, -2.2125e+00, -9.3825e-01, -1.4302e+00],\n",
+      "        [-6.8268e-02, -6.8548e-01, -8.7814e-01, -2.6073e-01,  1.1789e+00],\n",
+      "        [ 3.4497e-01, -7.4458e-01,  8.1852e-02,  1.5992e-01, -2.1575e-01],\n",
+      "        [ 1.0032e+00, -2.1647e-01,  4.2437e-01,  1.0229e+00, -1.3149e-01],\n",
+      "        [-5.9176e-01, -1.9053e-01,  5.0290e-01,  1.3263e+00,  1.0897e+00],\n",
+      "        [ 2.1348e+00, -4.8565e-01,  1.2215e+00,  1.5444e-01, -2.3522e-01],\n",
+      "        [ 2.2443e-01,  1.8076e-01, -3.9431e-01, -4.0065e-01, -1.6981e+00],\n",
+      "        [ 3.5860e-01,  3.8522e-01,  9.1836e-02, -1.4563e-01,  2.7311e-01],\n",
+      "        [ 5.1119e-02,  5.1993e-01, -2.9490e-01,  5.0846e-01,  6.2006e-02],\n",
+      "        [ 8.4079e-01, -1.6898e+00, -1.3469e+00, -7.1189e-01, -5.2249e-01],\n",
+      "        [-1.8026e+00, -1.0805e+00,  3.5346e-01,  1.5849e+00, -1.7060e-02],\n",
+      "        [ 3.5661e-01, -1.4686e-01,  4.2012e-01, -2.4082e+00,  5.2633e-01],\n",
+      "        [ 1.7959e+00, -1.1890e+00, -1.3199e+00, -8.7886e-02, -1.3422e-01],\n",
+      "        [-4.1468e-02, -1.0472e+00,  9.7123e-01, -2.4189e+00, -5.1518e-01]])\n",
+      "tensor([[0.5654, 0.4606],\n",
+      "        [0.9604, 0.9197],\n",
+      "        [0.3562, 0.1711],\n",
+      "        [0.5955, 0.3805],\n",
+      "        [0.7226, 0.9611],\n",
+      "        [0.8560, 0.4560],\n",
+      "        [0.8329, 0.0234],\n",
+      "        [0.2511, 0.7713],\n",
+      "        [0.2860, 0.9627],\n",
+      "        [0.3335, 0.4380],\n",
+      "        [0.7217, 0.3021],\n",
+      "        [0.5481, 0.4460],\n",
+      "        [0.3026, 0.8462],\n",
+      "        [0.7479, 0.0702],\n",
+      "        [0.8900, 0.3638],\n",
+      "        [0.6029, 0.0481],\n",
+      "        [0.1810, 0.5671],\n",
+      "        [0.8894, 0.3601],\n",
+      "        [0.3693, 0.2348],\n",
+      "        [0.1755, 0.0155],\n",
+      "        [0.7658, 0.5516],\n",
+      "        [0.8428, 0.9383],\n",
+      "        [0.8704, 0.1764],\n",
+      "        [0.9616, 0.4139],\n",
+      "        [0.7205, 0.0693],\n",
+      "        [0.0935, 0.8708],\n",
+      "        [0.2993, 0.4146],\n",
+      "        [0.1117, 0.4166],\n",
+      "        [0.9605, 0.9661],\n",
+      "        [0.5848, 0.8697],\n",
+      "        [0.3716, 0.1908],\n",
+      "        [0.1212, 0.9195]])\n"
      ]
     }
    ],
