reorganization of libraries

--- a/MH_algorithm/sampling.ipynb
+++ b/MH_algorithm/sampling.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lib\n",
-    "from MHNeuralState import MHNeuralState\n",
+    "from libraries import lib\n",
+    "from libraries.NeuralStates import MHNeuralState\n",
     "import qutip as qt\n",
     "import numpy as np\n",
     "import numpy.random as npr\n",
@@ -481,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from MHNeuralState import SparseStateVector"
+    "from libraries.NeuralStates import SparseStateVector"
    ]
   },
   {
