--- a/MLP_full_input/full-input-testing/changing_J.ipynb
+++ b/MLP_full_input/full-input-testing/changing_J.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lib\n",
+    "from libraries import lib\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import matplotlib.pyplot as plt\n",
