--- a/MLP_full_input/full-input-testing/eigenvalue_accuracies.ipynb
+++ b/MLP_full_input/full-input-testing/eigenvalue_accuracies.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lib\n",
+    "from libraries import lib\n",
     "import qutip as qt\n",
     "import torch\n",
     "import torch.nn as nn\n",
