--- a/TFIM_info/gs_shapes.ipynb
+++ b/TFIM_info/gs_shapes.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lib \n",
-    "from NeuralStates import *\n",
+    "import sys; import os; sys.path.insert(0, os.path.abspath('..'))\n",
+    "from libraries import lib\n",
+    "from libraries.NeuralStates import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats"
