--- a/TFIM_info/x_basis_test.ipynb
+++ b/TFIM_info/x_basis_test.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import qutip as qt\n",
     "import math\n",
-    "import lib\n",
+    "from libraries import lib\n",
     "import numpy as np"
    ]
   },
