--- a/small_testing/time_testing.ipynb
+++ b/small_testing/time_testing.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lib \n",
+    "from libraries import lib \n",
     "import numpy as np\n",
     "import torch\n",
     "import random"
