--- a/MLP_MC/MH_training_locals.ipynb
+++ b/MLP_MC/MH_training_locals.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lib\n",
-    "from NeuralStates import *\n",
+    "from libraries import lib\n",
+    "from libraries.NeuralStates import *\n",
     "import qutip as qt\n",
     "import torch.nn as nn \n",
     "import torch\n",
