--- a/MLP_full_input/log_amp_plus_c.ipynb
+++ b/MLP_full_input/log_amp_plus_c.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lib\n",
+    "from libraries import lib\n",
     "import qutip as qt\n",
     "import torch\n",
     "import torch.nn as nn\n",
