--- a/MLP_full_input/torch_graph_comparison.ipynb
+++ b/MLP_full_input/torch_graph_comparison.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lib\n",
+    "import sys; import os; sys.path.insert(0, os.path.abspath('..'))\n",
+    "from libraries import lib\n",
     "import qutip as qt\n",
     "import torch\n",
     "import torch.nn as nn\n",
