testing for small n with symbolic fitting

--- a/KAN_full_input/KAN_small_n.ipynb
+++ b/KAN_full_input/KAN_small_n.ipynb
@@ -540,7 +540,7 @@
    "source": [
     "epochs = []\n",
     "loss_data = []\n",
-    "optimizer = LBFGS(model.parameters(), lr=1, history_size=10, line_search_fn=\"strong_wolfe\", tolerance_grad=1e-32, tolerance_change=1e-32, tolerance_ys=1e-32)\n",
+    "optimizer = LBFGS(model.parameters(), lr=1, history_size=10, line_search_fn=\"strong_wolfe\", tolerance_grad=1e-32, tolerance_change=1e-32, tolerance_ys=1e-32, lamb=1)\n",
     "for epoch in range(10):\n",
     "    def closure():\n",
     "        optimizer.zero_grad()\n",
