attempt at using new gradient formula with mostly manual calculations of gradient

--- a/MLP_MC/manual_gradients.ipynb
+++ b/MLP_MC/manual_gradients.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,14 +237,14 @@
     "        for adjacency in lib.generate_adjacencies(basis_state, N):\n",
     "            output_prime = model_to_output(adjacency)\n",
     "            eloc += lib.calc_H_elem(N, J, Gamma, basis_state, adjacency) * torch.exp(output_prime[0] - output[0] + 1.j * 2 * np.pi * (output_prime[1] - output[1]))\n",
-    "        eloc += lib.calc_H_elem(N, J, Gamma, basis_state, basis_state)\n",
+    "        # eloc += lib.calc_H_elem(N, J, Gamma, basis_state, basis_state)\n",
     "        eloc_values.append(eloc)\n",
     "    return eloc_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
     "        return x[0] + 1.j * x[1]\n",
     "\n",
     "    params = [n for n in model.parameters()]\n",
-    "    energy = lib.TFIM_expectation_using_locals(sampled_vector, N, J, Gamma, model, log_amp_phase)\n",
+    "    energy = # lib.TFIM_expectation_using_locals(sampled_vector, N, J, Gamma, model, log_amp_phase)\n",
     "    for i in range(len(params)):\n",
     "        p = params[i]\n",
     "        grad = torch.zeros(p.shape)\n",
@@ -302,12 +302,12 @@
     "def update_gradients(model, lr):\n",
     "    with torch.no_grad():\n",
     "        for p in model.parameters():\n",
-    "            p -= lr * p.grad \n"
+    "            p += lr * p.grad \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -339,70 +339,39 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[ 1.2399e-01, -6.9577e-02,  2.0703e-01,  2.7970e-01,  1.7864e-01,\n",
-      "         -2.8881e-01],\n",
-      "        [ 2.4756e-01,  2.9709e-01, -2.8225e-01,  8.7880e-02, -1.7080e-01,\n",
-      "         -3.0567e-02],\n",
-      "        [ 2.0476e-01, -2.4860e-01, -3.1950e-02,  2.6819e-02, -1.0525e-01,\n",
-      "         -3.7605e-01],\n",
-      "        [ 2.9361e-01, -2.0021e-04,  6.7889e-02, -3.1584e-01, -3.4393e-02,\n",
-      "          2.3144e-01],\n",
-      "        [-2.7328e-01,  2.4530e-01, -3.9614e-01, -1.2676e-01, -1.1906e-01,\n",
-      "          2.6199e-02],\n",
-      "        [-3.4742e-01,  2.0432e-01, -2.5909e-01,  3.3132e-01, -3.7207e-01,\n",
-      "          3.4773e-01],\n",
-      "        [-4.0441e-01, -2.6788e-01,  3.3489e-02, -3.3940e-01, -2.5297e-01,\n",
-      "         -3.8853e-01],\n",
-      "        [ 1.2889e-01,  1.3381e-01, -1.7449e-01,  3.8351e-02,  3.6061e-01,\n",
-      "          6.2137e-03],\n",
-      "        [-2.1327e-01, -3.8807e-01,  3.4640e-01,  3.2096e-01,  1.3811e-01,\n",
-      "          3.0136e-01],\n",
-      "        [-1.4434e-01, -5.5235e-02,  5.5037e-02, -2.3440e-01,  1.3363e-01,\n",
-      "          1.4014e-01],\n",
-      "        [ 5.1055e-02, -3.7771e-01,  4.8450e-02, -3.4991e-01, -1.7260e-02,\n",
-      "          3.5835e-01],\n",
-      "        [ 3.1219e-01, -3.8108e-01, -2.2094e-01,  6.9888e-02,  1.8297e-01,\n",
-      "          2.6717e-01],\n",
-      "        [ 2.0841e-01,  3.6709e-01,  1.7182e-03, -2.5320e-01, -3.8324e-01,\n",
-      "          6.3503e-02],\n",
-      "        [ 1.8833e-01,  1.7136e-01,  2.1422e-01, -2.4325e-01, -3.4536e-01,\n",
-      "          1.8272e-02],\n",
-      "        [ 1.6397e-01,  1.1789e-01,  3.0810e-01, -3.0724e-03, -3.4886e-01,\n",
-      "         -7.2342e-02],\n",
-      "        [ 5.3221e-04,  3.1015e-02,  3.0561e-02,  2.1340e-01, -2.7550e-01,\n",
-      "          2.0649e-01],\n",
-      "        [-2.7007e-02, -2.5944e-01, -5.0552e-02, -3.7452e-01, -1.6088e-01,\n",
-      "         -1.3465e-02],\n",
-      "        [-4.3639e-02,  2.8811e-01,  3.4841e-01, -2.2366e-01, -5.6817e-02,\n",
-      "         -3.5311e-01],\n",
-      "        [ 3.5412e-01, -3.9562e-01,  1.3909e-01,  2.2586e-01, -9.5950e-02,\n",
-      "          3.5377e-02],\n",
-      "        [-3.9045e-01, -6.0391e-02,  3.7813e-01,  3.7035e-01,  9.2867e-02,\n",
-      "          9.8350e-02],\n",
-      "        [-3.8072e-01,  3.3632e-01,  3.4299e-01,  1.1635e-01, -3.7352e-01,\n",
-      "         -3.5525e-01],\n",
-      "        [ 1.6000e-01, -3.4309e-01,  3.9557e-01, -2.1697e-01, -7.2004e-02,\n",
-      "          1.4883e-01],\n",
-      "        [ 2.0606e-01, -1.8478e-01,  1.7816e-01, -1.1415e-02,  3.1625e-01,\n",
-      "         -2.4135e-01],\n",
-      "        [ 1.6071e-01, -2.7778e-02,  2.3863e-01,  1.2329e-01,  2.5248e-01,\n",
-      "         -3.3301e-01],\n",
-      "        [ 2.5081e-01, -3.2684e-01,  4.4391e-02,  9.3282e-02,  2.5160e-01,\n",
-      "          4.0627e-01],\n",
-      "        [-4.4749e-02,  2.8710e-01, -1.0834e-01,  1.0522e-01,  2.6845e-01,\n",
-      "          6.3554e-02],\n",
-      "        [-2.2870e-02, -1.9226e-01, -1.3989e-01, -5.4323e-02,  1.3106e-01,\n",
-      "          2.9577e-01],\n",
-      "        [ 3.3116e-01, -5.7352e-02,  2.3673e-03,  3.3179e-01,  2.7305e-01,\n",
-      "         -1.0234e-01],\n",
-      "        [ 1.4155e-01, -2.2871e-01,  4.6575e-02, -1.6960e-01,  4.4683e-02,\n",
-      "          1.5774e-01],\n",
-      "        [-9.0161e-02, -3.0682e-01,  3.4209e-02, -3.1155e-01,  1.9863e-01,\n",
-      "          2.6191e-01],\n",
-      "        [-2.4785e-01,  2.3627e-01, -1.6472e-01,  4.2836e-02,  1.9744e-01,\n",
-      "         -1.3945e-01],\n",
-      "        [ 3.1563e-01,  3.9549e-01,  3.5780e-01, -2.4364e-01, -2.3213e-01,\n",
-      "          4.0469e-01]], requires_grad=True)\n",
+      "tensor([[-0.1308,  0.2979, -0.2408, -0.2620,  0.1666,  0.0668],\n",
+      "        [-0.3188, -0.1433, -0.2242,  0.2391, -0.1207,  0.3539],\n",
+      "        [-0.4079, -0.2942,  0.1733, -0.2653,  0.0198,  0.0406],\n",
+      "        [ 0.3843,  0.2710, -0.2725,  0.1489,  0.1490, -0.1666],\n",
+      "        [ 0.3209,  0.2624, -0.0622, -0.1468,  0.3634,  0.3543],\n",
+      "        [ 0.2540,  0.3930,  0.1019, -0.2897, -0.3592,  0.3650],\n",
+      "        [-0.3040, -0.3116, -0.1106, -0.3790,  0.2897, -0.2073],\n",
+      "        [ 0.0252, -0.0414,  0.0143, -0.3691, -0.0200,  0.1184],\n",
+      "        [-0.3694,  0.3216,  0.0432,  0.3746, -0.0206, -0.3100],\n",
+      "        [ 0.2689, -0.3660, -0.0091, -0.2488,  0.1504,  0.0083],\n",
+      "        [ 0.1293, -0.1399,  0.0953,  0.1167, -0.1892,  0.2592],\n",
+      "        [-0.2867,  0.0284, -0.2861, -0.2635,  0.2299, -0.2762],\n",
+      "        [-0.2474, -0.0844,  0.0051,  0.0792, -0.1043,  0.0739],\n",
+      "        [-0.1683, -0.2008, -0.0345,  0.1325,  0.1517,  0.0028],\n",
+      "        [-0.2652, -0.1139, -0.1074, -0.3011,  0.0672,  0.3861],\n",
+      "        [-0.2173, -0.2383,  0.1135, -0.1898, -0.1297, -0.0576],\n",
+      "        [-0.0109,  0.0961,  0.3566, -0.2249, -0.0442, -0.0066],\n",
+      "        [-0.0022, -0.3215, -0.0680,  0.3766,  0.0562,  0.3207],\n",
+      "        [-0.1914,  0.2027, -0.1845,  0.0841, -0.0107,  0.0949],\n",
+      "        [-0.3486, -0.1919, -0.4076, -0.3099, -0.1343, -0.2002],\n",
+      "        [ 0.2348, -0.0160, -0.0945,  0.3534,  0.3210, -0.1791],\n",
+      "        [ 0.0960,  0.3533,  0.3426,  0.1120, -0.1432, -0.2615],\n",
+      "        [ 0.1835,  0.3854,  0.2590, -0.3512,  0.0580, -0.0767],\n",
+      "        [ 0.2327,  0.3005,  0.2648, -0.4034, -0.2119,  0.3860],\n",
+      "        [-0.2428,  0.3999,  0.0559, -0.3517, -0.2583,  0.3457],\n",
+      "        [-0.0573,  0.1626, -0.3308,  0.0987, -0.0930,  0.2951],\n",
+      "        [ 0.0670,  0.2498, -0.0183,  0.3354, -0.2776, -0.1871],\n",
+      "        [-0.2130, -0.1755,  0.3293,  0.3931,  0.2831, -0.0702],\n",
+      "        [ 0.3743,  0.3008,  0.2079,  0.0589,  0.4078, -0.3072],\n",
+      "        [-0.0197,  0.1157, -0.3912, -0.2291, -0.1426, -0.2329],\n",
+      "        [-0.1104, -0.3757,  0.3091, -0.1280, -0.2225,  0.0660],\n",
+      "        [-0.1602,  0.2083,  0.0507,  0.0422,  0.1054, -0.2247]],\n",
+      "       requires_grad=True)\n",
       "tensor([[0., 0., 0., 0., 0., 0.],\n",
       "        [0., 0., 0., 0., 0., 0.],\n",
       "        [0., 0., 0., 0., 0., 0.],\n",
@@ -447,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,34 +427,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 tensor(-0.6855, grad_fn=<SelectBackward0>)\n",
-      "1 tensor(-0.8520, grad_fn=<SelectBackward0>)\n",
-      "2 tensor(-0.9844, grad_fn=<SelectBackward0>)\n",
-      "3 tensor(-1.1351, grad_fn=<SelectBackward0>)\n",
-      "4 tensor(-1.3058, grad_fn=<SelectBackward0>)\n",
-      "5 tensor(-1.5043, grad_fn=<SelectBackward0>)\n",
-      "6 tensor(-1.7415, grad_fn=<SelectBackward0>)\n",
-      "7 tensor(-2.0257, grad_fn=<SelectBackward0>)\n",
-      "8 tensor(-2.3663, grad_fn=<SelectBackward0>)\n",
-      "9 tensor(-2.7730, grad_fn=<SelectBackward0>)\n",
-      "10 tensor(-3.2517, grad_fn=<SelectBackward0>)\n",
-      "11 tensor(-3.7958, grad_fn=<SelectBackward0>)\n",
-      "12 tensor(-4.3776, grad_fn=<SelectBackward0>)\n",
-      "13 tensor(-4.9396, grad_fn=<SelectBackward0>)\n",
-      "14 tensor(-5.4076, grad_fn=<SelectBackward0>)\n",
-      "15 tensor(-5.7279, grad_fn=<SelectBackward0>)\n",
-      "16 tensor(-5.9100, grad_fn=<SelectBackward0>)\n",
-      "17 tensor(-5.9898, grad_fn=<SelectBackward0>)\n",
-      "18 tensor(-6.0010, grad_fn=<SelectBackward0>)\n",
-      "19 tensor(nan, grad_fn=<SelectBackward0>)\n",
-      "20 tensor(nan, grad_fn=<SelectBackward0>)\n"
+      "0 tensor(-0.5887, grad_fn=<SelectBackward0>)\n",
+      "1 tensor(-0.5444, grad_fn=<SelectBackward0>)\n",
+      "2 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "3 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "4 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "5 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "6 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "7 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "8 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "9 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "10 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "11 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "12 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "13 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "14 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "15 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "16 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "17 tensor(nan, grad_fn=<SelectBackward0>)\n",
+      "18 tensor(nan, grad_fn=<SelectBackward0>)\n"
      ]
     },
     {
@@ -495,8 +462,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[64], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m mh_state \u001b[38;5;241m=\u001b[39m UniformNeuralState(N, model, log_amp_phase, \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m N)\n\u001b[0;32m      7\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m----> 8\u001b[0m energy \u001b[38;5;241m=\u001b[39m \u001b[43mset_gradients\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmh_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mGamma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# energy = lib.TFIM_expectation_using_locals(mh_state, N, J, Gamma, model, log_amp_phase)\u001b[39;00m\n\u001b[0;32m     10\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
-      "Cell \u001b[1;32mIn[4], line 38\u001b[0m, in \u001b[0;36mset_gradients\u001b[1;34m(sampled_vector, N, J, Gamma, model)\u001b[0m\n\u001b[0;32m     35\u001b[0m log_psi\u001b[38;5;241m.\u001b[39mconj()\u001b[38;5;241m.\u001b[39mimag\u001b[38;5;241m.\u001b[39mbackward(retain_graph\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     36\u001b[0m grad_im_log \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mgrad\u001b[38;5;241m.\u001b[39mclone()\n\u001b[1;32m---> 38\u001b[0m mag_psi \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mabs\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexp\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlog_psi\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetach\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     39\u001b[0m H_psi_over_psi \u001b[38;5;241m=\u001b[39m lib\u001b[38;5;241m.\u001b[39mcalc_H_elem(N, J, Gamma, basis_state, adjacency) \u001b[38;5;241m*\u001b[39m torch\u001b[38;5;241m.\u001b[39mexp(log_psi_p \u001b[38;5;241m-\u001b[39m log_psi)\u001b[38;5;241m.\u001b[39mdetach() \u001b[38;5;241m-\u001b[39m avg\n\u001b[0;32m     40\u001b[0m grad \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m mag_psi \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m (grad_re_log \u001b[38;5;241m*\u001b[39m H_psi_over_psi\u001b[38;5;241m.\u001b[39mreal \u001b[38;5;241m-\u001b[39m grad_im_log \u001b[38;5;241m*\u001b[39m H_psi_over_psi\u001b[38;5;241m.\u001b[39mimag)\n",
+      "Cell \u001b[1;32mIn[16], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m mh_state \u001b[38;5;241m=\u001b[39m UniformNeuralState(N, model, log_amp_phase, \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m N)\n\u001b[0;32m      7\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m----> 8\u001b[0m energy \u001b[38;5;241m=\u001b[39m \u001b[43mset_gradients\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmh_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mJ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mGamma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# energy = lib.TFIM_expectation_using_locals(mh_state, N, J, Gamma, model, log_amp_phase)\u001b[39;00m\n\u001b[0;32m     10\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
+      "Cell \u001b[1;32mIn[11], line 40\u001b[0m, in \u001b[0;36mset_gradients\u001b[1;34m(sampled_vector, N, J, Gamma, model)\u001b[0m\n\u001b[0;32m     38\u001b[0m         mag_psi \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mabs\u001b[39m(torch\u001b[38;5;241m.\u001b[39mexp(log_psi))\u001b[38;5;241m.\u001b[39mdetach()\n\u001b[0;32m     39\u001b[0m         H_psi_over_psi \u001b[38;5;241m=\u001b[39m lib\u001b[38;5;241m.\u001b[39mcalc_H_elem(N, J, Gamma, basis_state, adjacency) \u001b[38;5;241m*\u001b[39m torch\u001b[38;5;241m.\u001b[39mexp(log_psi_p \u001b[38;5;241m-\u001b[39m log_psi)\u001b[38;5;241m.\u001b[39mdetach() \u001b[38;5;241m-\u001b[39m avg\n\u001b[1;32m---> 40\u001b[0m         grad \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m mag_psi \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m (grad_re_log \u001b[38;5;241m*\u001b[39m H_psi_over_psi\u001b[38;5;241m.\u001b[39mreal \u001b[38;5;241m-\u001b[39m grad_im_log \u001b[38;5;241m*\u001b[39m H_psi_over_psi\u001b[38;5;241m.\u001b[39mimag)\n\u001b[0;32m     42\u001b[0m         \u001b[38;5;66;03m# print(log_psi, log_psi_p, grad_re_log, grad_im_log, mag_psi, psi_over_psi)\u001b[39;00m\n\u001b[0;32m     43\u001b[0m p\u001b[38;5;241m.\u001b[39mgrad \u001b[38;5;241m=\u001b[39m grad\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
