--- a/MLP_MC/zhuo_method.ipynb
+++ b/MLP_MC/zhuo_method.ipynb
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
     "        for adjacency in lib.generate_adjacencies(basis_state, N):\n",
     "            output_prime = model_to_output(adjacency)\n",
     "            eloc += lib.calc_H_elem(N, J, Gamma, basis_state, adjacency) * torch.exp(output_prime[0] - output[0] + 1.j * 2 * np.pi * (output_prime[1] - output[1]))\n",
-    "        eloc += lib.calc_H_elem(N, J, Gamma, basis_state, basis_state)\n",
+    "        # eloc += lib.calc_H_elem(N, J, Gamma, basis_state, basis_state)\n",
     "        eloc_values.append(eloc)\n",
     "    return eloc_values"
    ]
