ran KAN tests for N=20 using sped up code

--- a/MH_algorithm/parallel_MH.ipynb
+++ b/MH_algorithm/parallel_MH.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "1b8790d2",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "ae7f6d43",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[699, 702, 113, 325, 748, 604, 405, 736, 197, 921, 445, 589, 330, 952, 349, 696, 500, 31, 353, 72, 55, 580, 442, 430, 725, 892, 212, 49, 360, 863, 93, 1016, 175, 214, 597, 296, 308, 146, 361, 540, 454, 884, 249, 484, 617, 925, 533, 542, 357, 520, 916, 999, 198, 885, 832, 707, 628, 307, 514, 437, 443, 231, 645, 327, 352, 194, 453, 573, 787, 970, 934, 470, 540, 199, 361, 451, 466, 801, 530, 283, 300, 576, 685, 327, 260, 995, 979, 167, 537, 216, 61, 323, 437, 398, 337, 873, 497, 133, 521, 538, 445, 288, 993, 506, 627, 366, 945, 173, 45, 513, 493, 49, 883, 793, 804, 162, 15, 192, 352, 648, 268, 419, 866, 1007, 16, 304, 540, 162, 102, 420, 508, 522, 787, 998, 919, 695, 774, 170, 212, 945, 617, 556, 465, 38, 722, 295, 422, 447, 936, 553, 1002, 254, 690, 42, 81, 160, 631, 276, 863, 913, 718, 47, 558, 321, 816, 1016, 217, 897, 405, 739, 714, 589, 65, 812, 268, 0, 236, 716, 280, 277, 430, 749, 231, 134, 905, 96, 230, 524, 512, 305, 1006, 675, 999, 702, 940, 198, 483, 256, 376, 473]\n",
+      "[946, 835, 658, 390, 314, 596, 681, 10, 814, 497, 900, 1016, 269, 691, 912, 360, 293, 947, 634, 1013, 612, 755, 951, 931, 344, 869, 189, 1015, 120, 893, 652, 656, 915, 160, 784, 549, 804, 863, 548, 870, 652, 939, 1008, 978, 14, 565, 937, 86, 622, 238, 969, 770, 1000, 962, 190, 290, 697, 141, 102, 592, 853, 866, 332, 354, 442, 944, 209, 724, 311, 452, 797, 98, 469, 170, 272, 768, 154, 217, 937, 807, 536, 614, 449, 166, 212, 786, 450, 443, 231, 305, 572, 626, 106, 176, 222, 863, 450, 205, 741, 317, 76, 747, 108, 188, 444, 295, 1000, 653, 255, 943, 362, 710, 840, 302, 788, 419, 198, 695, 228, 674, 818, 218, 338, 76, 263, 695, 907, 319, 46, 514, 217, 384, 239, 768, 855, 462, 795, 141, 420, 2, 432, 157, 40, 457, 962, 856, 498, 30, 605, 390, 441, 214, 810, 922, 775, 90, 624, 18, 792, 478, 566, 446, 130, 551, 154, 626, 771, 177, 228, 385, 920, 604, 935, 928, 939, 154, 566, 807, 385, 416, 784, 110, 803, 813, 894, 175, 309, 839, 193, 100, 920, 100, 446, 588, 924, 535, 563, 903, 644, 240]\n",
       "171\n"
      ]
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "ede9de95",
    "metadata": {},
    "outputs": [],
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "e04d3c0b",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
      "output_type": "stream",
      "text": [
       "here 0\n",
-      "3.635636806488037\n"
+      "10.272404909133911\n"
      ]
     }
    ],
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "8251025f",
    "metadata": {},
    "outputs": [
@@ -540,9 +540,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21166\n",
-      "{'forwards': 1.391538381576538, 'x_func': 0, 'gen_samples': 0.06081223487854004, 'convert_samples': 0.15440583229064941, 'output_to_psi': 0, 'calc_ratio': 0, 'modifications': 0}\n",
-      "21166\n"
+      "21186\n",
+      "{'forwards': 4.562281370162964, 'x_func': 0, 'gen_samples': 0.1672666072845459, 'convert_samples': 0.3215444087982178, 'output_to_psi': 0, 'calc_ratio': 0, 'modifications': 0}\n",
+      "21186\n"
      ]
     }
    ],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "e862eb61",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.15192699432373047\n"
+      "1.3077776432037354\n"
      ]
     }
    ],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "a48d3f5f",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
      "output_type": "stream",
      "text": [
       "491\n",
-      "{'forwards': 0.03354287147521973, 'x_func': 0.017861604690551758, 'gen_samples': 0.01392674446105957, 'convert_samples': 0, 'output_to_psi': 0.0161285400390625, 'calc_ratio': 0.010540008544921875, 'modifications': 0.05142545700073242}\n",
+      "{'forwards': 1.074425220489502, 'x_func': 0.02244877815246582, 'gen_samples': 0.03716015815734863, 'convert_samples': 0, 'output_to_psi': 0.05267906188964844, 'calc_ratio': 0.04322314262390137, 'modifications': 0.07052111625671387}\n",
       "24550\n"
      ]
     }
@@ -597,11 +597,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "babed72d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checkpoint directory created: ./model\n",
+      "saving model version 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import kan\n",
+    "N = 10\n",
+    "kan_model = kan.KAN([N, N, 2], device='cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5ec67098",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\taoha\\anaconda3\\envs\\kans\\Lib\\site-packages\\kan\\MultKAN.py:813: UserWarning: std(): degrees of freedom is <= 0. Correction should be strictly less than the reduction factor (input numel divided by output numel). (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\ReduceOps.cpp:1808.)\n",
+      "  self.subnode_actscale.append(torch.std(x, dim=0).detach())\n",
+      "c:\\Users\\taoha\\anaconda3\\envs\\kans\\Lib\\site-packages\\kan\\MultKAN.py:823: UserWarning: std(): degrees of freedom is <= 0. Correction should be strictly less than the reduction factor (input numel divided by output numel). (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\ReduceOps.cpp:1808.)\n",
+      "  input_range = torch.std(preacts, dim=0) + 0.1\n",
+      "c:\\Users\\taoha\\anaconda3\\envs\\kans\\Lib\\site-packages\\kan\\MultKAN.py:824: UserWarning: std(): degrees of freedom is <= 0. Correction should be strictly less than the reduction factor (input numel divided by output numel). (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\ReduceOps.cpp:1808.)\n",
+      "  output_range_spline = torch.std(postacts_numerical, dim=0) # for training, only penalize the spline part\n",
+      "c:\\Users\\taoha\\anaconda3\\envs\\kans\\Lib\\site-packages\\kan\\MultKAN.py:825: UserWarning: std(): degrees of freedom is <= 0. Correction should be strictly less than the reduction factor (input numel divided by output numel). (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\ReduceOps.cpp:1808.)\n",
+      "  output_range = torch.std(postacts, dim=0) # for visualization, include the contribution from both spline + symbolic\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here 0\n",
+      "83.54823136329651\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "state_old = MHNeuralState(N, kan_model, utils.log_amp_phase, lambda x: utils.bitflip_x(x, N, 1), 0, 1000, burnin = 50, lag = 10, chains = 1, new = True)\n",
+    "print(time.time() - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "71a2c1f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1024\n",
+      "{'forwards': 80.92080807685852, 'x_func': 0, 'gen_samples': 0.0030183792114257812, 'convert_samples': 0.019258737564086914, 'output_to_psi': 0, 'calc_ratio': 0, 'modifications': 0}\n",
+      "1024\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(state_old.forwards)\n",
+    "print(state_old.times)\n",
+    "print(state_old.gen_states)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b99e748",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3077776432037354\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "chains = 50\n",
+    "state_chained = MHNeuralState(N, kan_model, utils.log_amp_phase, lambda x: utils.bitflip_x(x, N, 1), torch.tensor([0] * chains, dtype = torch.long), 1000, burnin = 50, lag = 10, chains = chains)\n",
+    "print(time.time() - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33d298a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "491\n",
+      "{'forwards': 1.074425220489502, 'x_func': 0.02244877815246582, 'gen_samples': 0.03716015815734863, 'convert_samples': 0, 'output_to_psi': 0.05267906188964844, 'calc_ratio': 0.04322314262390137, 'modifications': 0.07052111625671387}\n",
+      "24550\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(state_chained.forwards)\n",
+    "print(state_chained.times)\n",
+    "print(state_chained.gen_states)"
+   ]
   }
  ],
  "metadata": {
