MLP MC tests with sped up code

--- a/MLP_MC/improve_gen_eloc_distr.ipynb
+++ b/MLP_MC/improve_gen_eloc_distr.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "356a1fe5",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
     "            return sampled_vector.nn_output[x]\n",
     "        if x in nn_output_calcs:\n",
     "            return nn_output_calcs[x]\n",
-    "        tens = torch.tensor([lib.generate_state_array(x, N)], dtype = torch.float32)\n",
+    "        tens = torch.tensor([utils.generate_state_array(x, N)], dtype = torch.float32)\n",
     "        output = model(tens)[0]\n",
     "        nn_output_calcs[x] = output\n",
     "        return output\n",
@@ -110,10 +110,10 @@
     {
      "data": {
       "text/plain": [
-       "{0: tensor(-3.8771+0.0212j, grad_fn=<AddBackward0>),\n",
-       " 1: tensor(0.1552+0.2450j, grad_fn=<AddBackward0>),\n",
-       " 2: tensor(-0.0864-0.2296j, grad_fn=<AddBackward0>),\n",
-       " 3: tensor(-4.1640-0.1147j, grad_fn=<AddBackward0>)}"
+       "{2: tensor(-0.0354-0.1061j, grad_fn=<AddBackward0>),\n",
+       " 0: tensor(-4.2279+0.3627j, grad_fn=<AddBackward0>),\n",
+       " 1: tensor(0.0606+0.1998j, grad_fn=<AddBackward0>),\n",
+       " 3: tensor(-3.7272-0.3018j, grad_fn=<AddBackward0>)}"
       ]
      },
      "execution_count": 5,
@@ -134,10 +134,10 @@
     {
      "data": {
       "text/plain": [
-       "{0: tensor(-3.8771+0.0212j, grad_fn=<AddBackward0>),\n",
-       " 1: tensor(0.1552+0.2450j, grad_fn=<AddBackward0>),\n",
-       " 2: tensor(-0.0864-0.2296j, grad_fn=<AddBackward0>),\n",
-       " 3: tensor(-4.1640-0.1147j, grad_fn=<AddBackward0>)}"
+       "{2: tensor(-0.0354-0.1061j, grad_fn=<AddBackward0>),\n",
+       " 0: tensor(-4.2279+0.3627j, grad_fn=<AddBackward0>),\n",
+       " 1: tensor(0.0606+0.1998j, grad_fn=<AddBackward0>),\n",
+       " 3: tensor(-3.7272-0.3018j, grad_fn=<AddBackward0>)}"
       ]
      },
      "execution_count": 6,
@@ -178,21 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "52180026",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{512: tensor(-16.0188+0.0788j, grad_fn=<AddBackward0>),\n",
-       " 0: tensor(-19.9186-0.1198j, grad_fn=<AddBackward0>),\n",
-       " 2: tensor(-15.9095-0.0636j, grad_fn=<AddBackward0>),\n",
-       " 6: tensor(-16.0861+0.0744j, grad_fn=<AddBackward0>),\n",
-       " 22: tensor(-12.0823+0.0055j, grad_fn=<AddBackward0>)}"
+       "{4: tensor(-15.6724+0.1789j, grad_fn=<AddBackward0>),\n",
+       " 36: tensor(-12.0176+0.0248j, grad_fn=<AddBackward0>),\n",
+       " 548: tensor(-8.0692+0.0849j, grad_fn=<AddBackward0>),\n",
+       " 32: tensor(-16.0977-0.0167j, grad_fn=<AddBackward0>)}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,21 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "cae19f46",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{512: tensor(-16.0188+0.0788j, grad_fn=<AddBackward0>),\n",
-       " 0: tensor(-19.9186-0.1198j, grad_fn=<AddBackward0>),\n",
-       " 2: tensor(-15.9095-0.0636j, grad_fn=<AddBackward0>),\n",
-       " 6: tensor(-16.0861+0.0744j, grad_fn=<AddBackward0>),\n",
-       " 22: tensor(-12.0823+0.0055j, grad_fn=<AddBackward0>)}"
+       "{4: tensor(-15.6724+0.1789j, grad_fn=<AddBackward0>),\n",
+       " 36: tensor(-12.0176+0.0248j, grad_fn=<AddBackward0>),\n",
+       " 548: tensor(-8.0692+0.0849j, grad_fn=<AddBackward0>),\n",
+       " 32: tensor(-16.0977-0.0167j, grad_fn=<AddBackward0>)}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "4557548c",
    "metadata": {},
    "outputs": [],
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "c87fe44e",
    "metadata": {},
    "outputs": [
@@ -249,8 +247,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MLP unbatched time: 0.14342761039733887\n",
-      "MLP batched time: 0.08694863319396973\n"
+      "MLP unbatched time: 0.1987898349761963\n",
+      "MLP batched time: 0.09864926338195801\n"
      ]
     }
    ],
@@ -265,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9dafca97",
    "metadata": {},
    "outputs": [
@@ -275,6 +273,20 @@
      "text": [
       "checkpoint directory created: ./model\n",
       "saving model version 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\taoha\\anaconda3\\envs\\kans\\Lib\\site-packages\\kan\\MultKAN.py:813: UserWarning: std(): degrees of freedom is <= 0. Correction should be strictly less than the reduction factor (input numel divided by output numel). (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\ReduceOps.cpp:1808.)\n",
+      "  self.subnode_actscale.append(torch.std(x, dim=0).detach())\n",
+      "c:\\Users\\taoha\\anaconda3\\envs\\kans\\Lib\\site-packages\\kan\\MultKAN.py:823: UserWarning: std(): degrees of freedom is <= 0. Correction should be strictly less than the reduction factor (input numel divided by output numel). (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\ReduceOps.cpp:1808.)\n",
+      "  input_range = torch.std(preacts, dim=0) + 0.1\n",
+      "c:\\Users\\taoha\\anaconda3\\envs\\kans\\Lib\\site-packages\\kan\\MultKAN.py:824: UserWarning: std(): degrees of freedom is <= 0. Correction should be strictly less than the reduction factor (input numel divided by output numel). (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\ReduceOps.cpp:1808.)\n",
+      "  output_range_spline = torch.std(postacts_numerical, dim=0) # for training, only penalize the spline part\n",
+      "c:\\Users\\taoha\\anaconda3\\envs\\kans\\Lib\\site-packages\\kan\\MultKAN.py:825: UserWarning: std(): degrees of freedom is <= 0. Correction should be strictly less than the reduction factor (input numel divided by output numel). (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\ReduceOps.cpp:1808.)\n",
+      "  output_range = torch.std(postacts, dim=0) # for visualization, include the contribution from both spline + symbolic\n"
      ]
     }
    ],
@@ -286,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "6b502954",
    "metadata": {},
    "outputs": [
@@ -294,8 +306,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KAN unbatched time: 9.036884784698486\n",
-      "KAN batched time: 0.13714289665222168\n"
+      "KAN unbatched time: 10.611034393310547\n",
+      "KAN batched time: 0.17409944534301758\n"
      ]
     }
    ],
