various testing notebooks

--- a/test/pytorch_test.ipynb
+++ b/test/pytorch_test.ipynb
@@ -15,6 +15,52 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "df05751c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "builtin_function_or_method"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(torch.tanh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eac24984",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "tanh = torch.tanh\n",
+    "cos = torch.cos\n",
+    "ltanh = lambda x : torch.tanh(x)\n",
+    "lcos = lambda x : torch.cos(x)\n",
+    "print(type(torch.tanh) == torch.tanh)\n",
+    "print(torch.tanh == tanh)\n",
+    "print(torch.tanh == ltanh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "6de573ba",
    "metadata": {},
    "outputs": [
